--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,4 +53,5 @@ jobs:
         run: |
           sudo apt update
           sudo apt-get install gendarme
-          gendarme -- *.exe
+          cd source/
+          gendarme -- autodeploytonugettest.dll
