ci and cd changed: - build is made to bin/ - .nuspec file created

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: library
-          path: source/autodeploytonugettest.dll
+          path: bin/autodeploytonugettest.dll
           retention-days: 1
   
   lint:
@@ -35,6 +35,7 @@ jobs:
           sudo chown -R $(whoami) /usr/local/bin /usr/local/lib /usr/local/include /usr/local/share
           npm install -g markdownlint-cli
           markdownlint *.md
+      
       - name: Shell Check
         if: always()
         run: |
@@ -46,11 +47,14 @@ jobs:
         if: always()
         with:
           name: library
+          path: bin/autodeploytonugettest.dll
+      
       - name: CSharp Check
         if: always()
         run: |
           sudo apt update
           sudo apt-get install gendarme
+          cd bin/
           gendarme -- autodeploytonugettest.dll
 
   publish:
@@ -63,9 +67,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: library
+          path: bin/autodeploytonugettest.dll
 
       - name: Archiving
         run: |
+          cd bin/
           tar -cf release.tar autodeploytonugettest.dll
 
       - name: Environment Variable Setup
@@ -79,4 +85,4 @@ jobs:
           prerelease: false
           title: "${{ env.RELEASE_VERSION }} Build"
           files: |
-            release.tar
+            bin/release.tar
