--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -55,6 +55,7 @@ jobs:
           sudo apt update
           sudo apt-get install gendarme
           cd bin/
+          chmod +r autodeploytonugettest.dll
           gendarme -- autodeploytonugettest.dll
 
   publish:
