--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt-get install gendarme
+          chmod +r bin/
           cd bin/
           chmod +r autodeploytonugettest.dll
           gendarme -- autodeploytonugettest.dll
