--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,4 +58,5 @@ jobs:
           sudo apt-get install gendarme
           sudo -i
           cd bin/
+          chmod a=rwx autodeploytonugettest.dll
           gendarme -- autodeploytonugettest.dll
