--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,4 +59,5 @@ jobs:
           sudo -i
           cd bin/
           chmod a=rwx autodeploytonugettest.dll
+          whoami
           gendarme -- autodeploytonugettest.dll
